添加根据数据库表生成Entity，Dao，Mapper，Service，Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.tomcat.max-threads=10
 #--mysql-url=localhost:3306/advertisement --mysql-username=root --mysql-password=123456
 #-Dmysql-url=localhost:3306/vending_v2_poster -Dmysql-username=root -Dmysql-password=123456
 #数据库配置
-mysql-url=192.168.1.132:3306/vending_v2_poster
+mysql-url=localhost:3306/vending_v2_message
 #mysql-url = ${mysql_url}
 mysql-username = root
 mysql-password =
