修改编码格式为utf-8

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,44 +1,44 @@
-## Êı¾İ¿âÁ¬½Ó²ÎÊı
+## æ•°æ®åº“è¿æ¥å‚æ•°
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/vending_v2_mall?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 jdbc.username = root
 jdbc.password = 123456
 
-##ÏîÄ¿Â·¾¶
+##é¡¹ç›®è·¯å¾„
 #projectPath = E:/other/base
-##ÊÇ·ñÉú³ÉBeanÊµÌåÀà
+##æ˜¯å¦ç”ŸæˆBeanå®ä½“ç±»
 beanFlag=true
-## Éú³ÉBeanÊµÌåÀàµÄ°üÃû
+## ç”ŸæˆBeanå®ä½“ç±»çš„åŒ…å
 beanPackage=com.springboot.base.module.entity
-##beanÊµÌåÀà¼Ì³ĞµÄ¹«¹²Àà
+##beanå®ä½“ç±»ç»§æ‰¿çš„å…¬å…±ç±»
 beanExtends=com.springboot.base.common.base.entity.BaseEntity
-##beanÊµ¼ÊÀà¼Ì³ĞµÄ¹«¹²Àà²»ĞèÒªÖØĞ´µÄÊôĞÔ
+##beanå®é™…ç±»ç»§æ‰¿çš„å…¬å…±ç±»ä¸éœ€è¦é‡å†™çš„å±æ€§
 beanExtendsColumn=createdAt,updatedAt
-##ÊÇ·ñÉú³ÉDao½Ó¿Ú
+##æ˜¯å¦ç”ŸæˆDaoæ¥å£
 daoFlag=true
-##Éú³ÉDao½Ó¿ÚµÄ°üÃû
+##ç”ŸæˆDaoæ¥å£çš„åŒ…å
 daoPackage=com.springboot.base.module.dao
-##dao½Ó¿ÚÀà¼Ì³ĞµÄ¹«¹²Àà
+##daoæ¥å£ç±»ç»§æ‰¿çš„å…¬å…±ç±»
 daoExtends=com.springboot.base.utils.MyMapper
-##ÊÇ·ñÉú³ÉMapper.xml
+##æ˜¯å¦ç”ŸæˆMapper.xml
 mapperXmlFlag=true
-##Éú³ÉMapper.xmlµÄ°üÃû
+##ç”ŸæˆMapper.xmlçš„åŒ…å
 mapperXmlPackage=mapper
-##ÊÇ·ñÉú³ÉService½Ó¿Ú
+##æ˜¯å¦ç”ŸæˆServiceæ¥å£
 serviceFlag=true
-##Éú³ÉService½Ó¿ÚµÄ°üÃû
+##ç”ŸæˆServiceæ¥å£çš„åŒ…å
 servicePackage=com.springboot.base.module.service
-##Service½Ó¿ÚÀà¼Ì³ĞµÄ¹«¹²Àà
+##Serviceæ¥å£ç±»ç»§æ‰¿çš„å…¬å…±ç±»
 serviceExtends=com.springboot.base.common.base.service.BaseService
-##ÊÇ·ñÉú³ÉServiceImplÊµÏÖÀà
+##æ˜¯å¦ç”ŸæˆServiceImplå®ç°ç±»
 serviceImplFlag=true
-##Éú³ÉServiceImplÊµÏÖÀàµÄ°üÃû
+##ç”ŸæˆServiceImplå®ç°ç±»çš„åŒ…å
 serviceImplPackage=com.springboot.base.module.service.impl
-##ServiceImplÊµÏÖÀà¼Ì³ĞµÄ¹«¹²Àà
+##ServiceImplå®ç°ç±»ç»§æ‰¿çš„å…¬å…±ç±»
 serviceImplExtends=com.springboot.base.common.base.service.impl.BaseServiceImpl
-##ÊÇ·ñÉú³ÉControllerÀà
+##æ˜¯å¦ç”ŸæˆControllerç±»
 controllerFlag=true
-##Éú³ÉControllerÀàµÄ°üÃû
+##ç”ŸæˆControllerç±»çš„åŒ…å
 controllerPackage=com.springboot.base.module.controller
-##ControllerÀà¼Ì³ĞµÄ¹«¹²Àà
+##Controllerç±»ç»§æ‰¿çš„å…¬å…±ç±»
 controllerExtends=com.springboot.base.common.base.controller.BaseController
