添加根据实体类生成Dao，Mapper.xml，Service,ServiceImpl,Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ server.tomcat.max-threads=10
 #spring.mvc.view.prefix=/WEB-INF/views/
 #设置视图解析器后缀
 #spring.mvc.view.suffix=.jsp
-#--mysql-url=localhost:3306/advertisement --mysql-username=root --mysql-password=123456
+#--mysql-url=localhost:3306/vending_v2_poster --mysql-username=root --mysql-password=123456
 #-Dmysql-url=localhost:3306/vending_v2_poster -Dmysql-username=root -Dmysql-password=123456
 #数据库配置
-mysql-url=localhost:3306/vending_v2_message
+mysql-url=localhost:3306/vending_v2_poster1
 #mysql-url = ${mysql_url}
 mysql-username = root
 mysql-password =
