--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 ## 数据库连接参数
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/vending_v2_mall?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+jdbc.url = jdbc:mysql://localhost:3306/vending_v2_poster?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 jdbc.username = root
 jdbc.password = 123456
 
