--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,10 @@ server.tomcat.max-threads=10
 #--mysql-url=localhost:3306/vending_v2_poster --mysql-username=root --mysql-password=123456
 #-Dmysql-url=localhost:3306/vending_v2_poster -Dmysql-username=root -Dmysql-password=123456
 #数据库配置
-mysql-url=localhost:3306/vending_v2_poster1
+mysql-url=localhost:3306/vending_v2_poster
 #mysql-url = ${mysql_url}
 mysql-username = root
-mysql-password =
+mysql-password =123456
 #jdbc:mysql://${mysql-url}?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.url= jdbc:mysql://${mysql-url}?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=${mysql-username}
@@ -33,7 +33,7 @@ spring.datasource.password=${mysql-password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #配置.xml文件路径
-mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*.xml,classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
 #配置模型路径
 mybatis.type-aliases-package=com.springboot.base.module.entity
 
@@ -73,7 +73,7 @@ spring.datasource.initialization-mode=ALWAYS
 spring.mvc.dispatch-options-request=true
 spring.jackson.time-zone=GMT+8
 #用户权限模块请求连接url
-#vendingv2.auth.url=localhost:9034/auth
+vendingv2.auth.url=localhost:9034/auth
 # 配置spring-boot-admin监控客户端连接
 #spring.boot.admin.client.url=http://localhost:8000
 #management.endpoints.web.exposure.include=*
